--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express-winston": "^2.4.0",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
-    "mongoose": "^4.11.3",
+    "mongoose": "4.10.8",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
     "winston": "^2.3.1"
