--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "eblog",
-  "version": "1.0.0",
-  "description": "learn",
-  "main": "index.js",
+  "name": "nblog",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "config-lite": "^2.0.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "express-formidable": "^1.0.0",
-    "express-session": "^1.15.4",
-    "express-winston": "^2.4.0",
-    "marked": "^0.3.6",
-    "moment": "^2.18.1",
-    "mongoose": "4.10.8",
-    "objectid-to-timestamp": "^1.3.0",
-    "sha1": "^1.1.1",
-    "winston": "^2.3.1"
-  },
-  "devDependencies": {
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "body-parser": "~1.15.1",
+    "connect-flash": "0.1.1",
+    "connect-mongo": "0.8.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "express-session": "1.9.1",
+    "jade": "~1.11.0",
+    "jstransformer-coffee-script": "^1.1.0",
+    "jstransformer-markdown-it": "^2.0.0",
+    "markdown": "^0.5.0",
+    "markdown-js": "0.0.3",
+    "mongodb": "2.0.42",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
